<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="newGame">New Game</string>
    <string name="clear">Clear score</string>
    <string name="help">Help</string>
    <string name="help_content">Be the first to get three in a row! This multiplayer game is played on a 3 by 3 game board. One player is X, the other O. players alternate placing their X or O on one of the empty fields. The game ends when one player gets three in a row or when there is no empty fields left, in which case the game ends in a tie.</string>
    <string name="back">Go back</string>
    <string name="option">Options</string>
    <string-array name="color">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Dark Gray</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Light Gray</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>Transparent</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string name="line_color">Line Color</string>
    <string name="O">O Marker Color</string>
    <string name="X">X Marker Color</string>
    <string name="background_color">Background Color</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>
