<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="10"
    android:orientation="horizontal" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom|right"
        android:layout_row="1"
        android:entries="@array/color"
        android:prompt="@string/background_color" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:layout_row="3"
        android:entries="@array/color"
        android:prompt="@string/line_color" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom|right"
        android:layout_row="5"
        android:entries="@array/color"
        android:prompt="@string/O" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:layout_row="7"
        android:entries="@array/color"
        android:prompt="@string/X" />

    <Button
        android:id="@+id/button2"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="8"
        android:text="@string/ok" />

    <Button
        android:id="@+id/button3"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_row="8"
        android:text="@string/cancel" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/line_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_row="4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/O"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_row="6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/X"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="1dp"
        android:layout_height="248dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="7" />

    <Space
        android:layout_width="1dp"
        android:layout_height="97dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="8" />

    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/background_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_row="2" />

    <Space
        android:layout_width="35dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="42dp"
        android:layout_height="1dp"
        android:layout_column="3"
        android:layout_row="0" />

</GridLayout>